--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-slick",
+  "name": "@adamastern/react-slick",
   "version": "0.12.0",
   "description": " React port of slick carousel",
   "main": "./lib",
