--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adamastern/react-slick",
-  "version": "0.12.0",
+  "version": "0.12.2",
   "description": " React port of slick carousel",
   "main": "./lib",
   "scripts": {
@@ -12,7 +12,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/akiran/react-slick"
+    "url": "https://github.com/adamastern/react-slick.git"
   },
   "keywords": [
     "slick",
